# mm

./: CMakeLists.txt  CMakePresets.json  README.md  diff.txt
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  README.md  main.cpp
examples/example2/: CMakeLists.txt  README.md  main.cpp
examples/example3/: CMakeLists.txt  README.md  main.cpp
examples/example4/: CMakeLists.txt  main.cpp
examples/example5/: CMakeLists.txt
examples/example6/: CMakeLists.txt  main.cpp
examples/example7_debug/: CMakeLists.txt  README.md  main.cpp
mm/constants/: constants.h
mm/data_collector/: i_data_collector.h
mm/data_collector/data_collector_1/: data_collector.h
mm/data_collector/data_collector_2/: data_collector_2.h
mm/feature_collector/: i_feature_collector.h
mm/feature_collector/feature_collector_1/: feature_collector.h
mm/feature_collector/feature_collector_2/: feature_collector.h
mm/hftbacktester/: hftbacktester.h
mm/history_manager/: history_manager.h
mm/matching_engine/: matching_engine.h
mm/order_book/: order_book.h
mm/split_view/: split_view.h
mm/strategy/: i_strategy.h
mm/strategy/avelaneda_stoikov/: avalaneda_stoikov_1.h  avalaneda_stoikov_microprice.h  avelaneda_stoikov_classic_gmn.h  config.h  old_config.h
mm/target_collector/: i_target_collector.h
mm/target_collector/target_collector_2/: price_snapshot.h  target_collector.h
mm/type/: external_trade.h  fill.h  inner_trade.h  l2snapshot.h  market_context.h  me_l2snapshot.h  order.h  order_type.h  side.h  trade_side.h  type_order_id.h
mm/util/: to_num.h
scripts/: download_data.sh
tests/: CMakeLists.txt  hftbacktester.cc  matching_engine.cc  order_book.cc
