
set (PROJECT_NAME unit_test)
project(${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 23)

macro(cxx_executable_extended prjname src)
  set(prj ${PROJECT_NAME}_${prjname})
  add_executable(${prj} ${src})
  foreach (lib "${ARGN}")
    target_link_libraries(${prj} ${lib})
  endforeach()
  target_include_directories(${prj} PRIVATE ${CMAKE_SOURCE_DIR})
  set_property(TARGET ${prj} PROPERTY CXX_STANDARD 23)
  set_target_properties(${prj} PROPERTIES
    CXX_SCAN_FOR_MODULES OFF
    CXX_MODULE_STD_ONLY OFF
  )
  # Запрещаем CMake добавлять флаги модулей
  set(CMAKE_EXPERIMENTAL_CXX_MODULE_CMAKE_API OFF)
  set(CMAKE_EXPERIMENTAL_CXX_MODULE_DYNDEP 0)
  gtest_add_tests(TARGET ${prj})
endmacro()

macro(cxx_executable name dir libs)
cxx_executable_extended(${name} ${dir}/${name}.cc ${libs}  ${ARGN})
endmacro()

#cxx_executable(hft_backtester_2 ${CMAKE_CURRENT_LIST_DIR} mm gtest_main gmock pthread)
cxx_executable(order_book ${CMAKE_CURRENT_LIST_DIR} mm gtest_main gmock pthread)
cxx_executable(matching_engine ${CMAKE_CURRENT_LIST_DIR} mm gtest_main gmock pthread)
cxx_executable(hftbacktester ${CMAKE_CURRENT_LIST_DIR} mm gtest_main gmock pthread)
